[package]
name = "axum_server_practice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
